# rusty-rays

./: .gitignore  Cargo.toml  README.md
.github/workflows/: checks.yml  release.yml  version-bump-checks.yml
cli/: Cargo.toml
cli/src/: main.rs
rusty-rays-cli/: Cargo.toml
rusty-rays-cli/src/: main.rs
rusty-rays-core/: Cargo.toml
rusty-rays-core/src/: lib.rs
rusty-rays-core/src/tracer/: bvh.rs  camera.rs  coords.rs  misc_types.rs  mod.rs  model.rs
rusty-rays-core/src/tracer/primitives/: cone.rs  mod.rs  plane.rs  polygon.rs  sphere.rs  triangle.rs
rusty-rays-core/src/tracer/rayshade4_file_parser/: mod.rs  parse_cone.rs  parse_cylinder_to_cone.rs  parse_polygon.rs  parse_sphere.rs  parse_surface.rs  parse_triangle.rs
rusty-rays-core/src/tracer/shader/: color.rs  light.rs  mod.rs
rusty-rays-core/src/utils/: config.rs  logger.rs  mod.rs
rusty-rays-desktop/: .env-sample  .gitignore  .prettierignore  README.md  components.json  download-subprocess-node.js  esbuild.run.js  eslint.config.js  index.html  main.js  package-lock.json  package.json  retro-ui-add-component.js  tsconfig.electron.main.json  tsconfig.json  tsconfig.node.json  tsconfig.vite.renderer.json  vite.config.ts  vite.renderer.config.ts
rusty-rays-desktop/assets/icons/mac/: icon.icns
rusty-rays-desktop/src/: App.tsx  main.ts  model-manager.ts  preload.ts  sub-process-shared.ts  tracer-manager.ts  tracer-subprocess-client.ts  tracer-subprocess-shared.ts  tracer-subprocess.ts
rusty-rays-desktop/src/electron-ipc/handles/: index.ts  model.ts  tracer.ts
rusty-rays-desktop/src/electron-ipc/shared/: README.md  index.ts
rusty-rays-desktop/src/ipc/handles/: index.ts  model.ts  tracer.ts
rusty-rays-desktop/src/ipc/invocation/: README.md
rusty-rays-desktop/src/ipc/shared-types/: index.d.ts  model-channels.d.ts
rusty-rays-desktop/src/main/: main.ts
rusty-rays-desktop/src/renderer/: App.tsx  index.css  index.html  indexed-db-image-cache.ts  main.tsx
rusty-rays-napi/: Cargo.toml
rusty-rays-napi-node/: .gitignore  .nvmrc  Cargo.toml  build.rs  index.ts  package-lock.json  package.json  test.ts  tsconfig.json  tsup.config.js
rusty-rays-napi-node/src/: build.rs  lib.rs
rusty-rays-napi/src/: lib.rs
sample-files/: app-icon-scene.ray  balls.ray  balls3-color.ray  balls3.ray  coordinate-system-calibration.ray  gears.ray  gears2.ray  gears4.ray  jacks.ray  shell-mirror.ray  shell.ray  shells.ray  single-sphere-test-extended.ray  single-sphere-test-point.ray  single-sphere-test.ray  single_sphere_test.ray  sphereflake-reduced-color-mirror.ray  sphereflake.ray  teapot.ray
src/: lib.rs  main.rs
src/tracer/: bvh.rs  color.rs  coords.rs  input_file_parser.rs  misc_types.rs  mod.rs  model.rs  plane_coords.rs  plane_coords_2d.rs  point.rs  polygon.rs  rayshade4_file_parser.rs  sphere.rs  types.rs
src/tracer/primitives/: cone.rs  cylinder.rs  mod.rs  plane.rs  polygon.rs  sphere.rs  triangle.rs
src/tracer/rayshade4_file_parser/: mod.rs  parse_cone.rs  parse_cylinder.rs  parse_cylinder_to_cone.rs  parse_polygon.rs  parse_sphere.rs
src/tracer/shader/: color.rs  light.rs  mod.rs
src/utils/: config.rs  logger.rs  mod.rs
(+36 files in other folders)
