[package]
name = "rusty-rays"
version = "0.1.0"
edition = "2021"
authors = ['William Wills']

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.14", features = ["derive"] }
dirs-next = "2.0.0"
once_cell = "1.20.2"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
image = "0.25.5"
num_cpus = "1.16.0"
serde_json5 = "0.1.0"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.22"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]