[package]
name = "rusty-rays-cli"
version = "0.3.0"
edition = "2024"
authors = ['William Wills']

resolver = "2"

[[bin]]
name = "rusty-rays-cli"
path = "src/main.rs"


[dependencies]
rusty-rays-core = { path = "../rusty-rays-core" }
clap = { version = "4.5.14", features = ["derive"] }
ctrlc = "3.5.2"