[package]
name = "rusty-rays-core"
version = "1.0.0"
edition = "2024"
authors = ['William Wills']

resolver = "2"

[lib]
name = "rusty_rays_core"
path = "src/lib.rs"


[dependencies]
chrono = "0.4.38"
dirs-next = "2.0.0"
once_cell = "1.20.2"
slog = "2.8.2"
slog-async = "2.8.0"
slog-term = "2.9.2"
image = "0.25.5"
num_cpus = "1.16.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.143"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
